Method invokes inefficient Boolean constructor (Dm) in GenomeAutoDiscovery Changed to Boolean.valueOf(value)